add all the impress at once (eventhough i know it is so BAD)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Testing...</title>
-		<meta chrset="utf-8" />
-	</head>
-	<body>
-		<h1>Hi! No problem is here...</h1>
-		<h2>sup sup ?!</h2>
-	</body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>لوتوس - موسیقی</title>
+	<link rel="stylesheet" href="./css/impress-common.css">
+	<link rel="stylesheet" href="./css/impress-demo.css">
+	<link rel="stylesheet" href="./css/custome.css">
+	<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+</head>
+<body class="impress-not-supported">
+	<div class="fallback-message">
+		<p>متاسفانه مرورگر شما از این روزنامه دیواری پشتیبانی نمی کند.</p>
+	</div>
+
+
+
+	<div id="impress">
+		<div id="myFirstSlide" class="step" data-x="1000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<img src="./img/logo1.png" alt="لوگوی لوتوس" width="50%">
+			<h2>موضوع: موسیقی</h2>
+			<b>اعضا :</b>
+			<ul>
+				<li>احسان ارشدی مجد</li>
+				<li>احسان فتح الله زاده</li>
+				<li>آرین عبداللهیان</li>
+				<li>علی یادگاری</li>
+			</ul>
+		</div>
+		<div class="step" data-x="-1000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>موسیقی چیست ؟</h2>
+			<p>
+				موسیقی یا موزیک یا خُنیا یک نوع از هنر است که عناصر اصلی تشکیل‌دهندهٔ آن، صدا و سکوت است و همینطور عناصر زیر مجموعه تر آن شامل زیروبمی (نَواک) (تعیین‌کنندهٔ ملودی و هارمونی) و ضرب‌آهنگ (ریتم) است. موسیقی را هنر بیان احساسات به وسیلهٔ آواها گفته‌اند که مهم‌ترین عوامل آن صدا و ریتم هستند و همچنین دانش ترکیب صداها به گونه‌ای که خوش‌آیند باشد و سبب انبساط و انقلاب روان شود.
+			</p><a href="https://fa.wikipedia.org/wiki/%D9%85%D9%88%D8%B3%DB%8C%D9%82%DB%8C" target="_blank">ادامه در منبع</a>
+		</div>
+		<div class="step" data-x="-3000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>موسیقی ایرانی</h2>
+			<p style="font-size: 24pt;">موسیقی سنتی ایرانی که با نام موسیقی اصیل ایرانی، موسیقی کلاسیک ایرانی و موسیقی دستگاهی نیز شناخته می‌شود، شامل دستگاه‌ها، نغمه‌ها و آوازها، از سال‌ها پیش از میلاد مسیح تا به امروز سینه به سینه در میان مردم ایران گشته است و آنچه دلنشین‌تر، ساده‌تر و قابل فهم‌تر بوده‌است، امروز در دسترس است. بخش بزرگی از آسیای میانه، افغانستان، پاکستان، جمهوری آذربایجان، ارمنستان، ترکیه و یونان متأثر از این موسیقی است و هرکدام به سهم خود تأثیراتی در شکل‌گیری این موسیقی داشته‌اند. از میان موسیقی‌دان‌ها یا به عبارتی نوازندگان موسیقی در ایران باستان می‌توان به «باربد»، «نکیسا» و «رامتین» اشاره کرد. موسیقی اصیل ایرانی، جزو کهن‌ترین سبک‌های موسیقایی از دوران باستان تا به امروز است. همچون گذشته‌های دور، مشاهیر صاحب سبک بسیاری در تاریخ ایران معاصر سر برآورده و هر یک، گامی مؤثّر در اعتلا و پویندگی این موسیقی اصیل برداشته‌اند.</p>
+			<a href="https://fa.wikipedia.org/wiki/%D9%85%D9%88%D8%B3%DB%8C%D9%82%DB%8C_%D8%B3%D9%86%D8%AA%DB%8C_%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C" target="_blank">ادامه در منبع</a>
+		</div>
+		<div class="step" data-x="-6000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<img src="./img/datgah.jpg" alt="دستگاه های موسیقی ایرانی">
+		</div>
+		<div class="step" data-x="-8000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>موسیقی کلاسیک</h2>
+			<p>موسیقی کلاسیک (به انگلیسی: classical music، به فرانسوی: musique classique) اصطلاحی عام است که به موسیقی هنریِ اروپا گفته می‌شود. آغازِ این موسیقی را از سده‌های میانه در حدود سال ۵۰۰ میلادی می‌دانند. شایان ذکر است که موسیقی کلاسیک و دوره کلاسیک دو مقولهٔ جداگانه هستند، اولی به سبک و دومی به دورهٔ تاریخی اشاره دارد.</p>
+			<a href="https://fa.wikipedia.org/wiki/%D9%85%D9%88%D8%B3%DB%8C%D9%82%DB%8C_%DA%A9%D9%84%D8%A7%D8%B3%DB%8C%DA%A9" target="_blank">ادمه در منبع</a>
+		</div>
+		<div class="step" data-x="-10000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>اساطیر موسیقی کلاسیک</h2>
+			<p>در رابطه با زندگی نامه موتسارت و بتهوون دو اسطوره موسیقی کلاسیک در دنیا توسط یکی از اعضای تیم، پاورپوینتی تهیه شده که در لینک زیر در دسترس قرار خواهد گرفت</p>
+			<a href="./extra/lotus-powerpoint.pptx" download>دانلود پاورپوینت</a>
+		</div>
+		<div class="step" data-x="-12000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>موسیقی راک</h2>
+			<p>موسیقی راک ژانری وسیع از موسیقی عامه‌پسند است که در اواخر دههٔ ۱۹۴۰ و اوایل دههٔ ۱۹۵۰ میلادی تحت عنوان «راک اند رول» شکل گرفت و در میانهٔ دههٔ ۱۹۶۰ و بعدتر به طیف گسترده‌ای از سبک‌های مختلف، به ویژه در بریتانیا و ایالات متحده گسترش یافت. این سبک ریشه در راک اند رول دههٔ ۱۹۴۰ و دههٔ ۱۹۵۰ دارد؛ سبکی که مستقیماً از ژانرهای بلوز و ریتم اند بلوز موسیقی آفریقایی-آمریکایی و از موسیقی کانتری گرفته شده‌است و تأثیراتی از موسیقی جاز و کلاسیک را نیز در خود گنجانیده‌است.</p>
+			<a href="https://fa.wikipedia.org/wiki/%D9%85%D9%88%D8%B3%DB%8C%D9%82%DB%8C_%D8%B1%D8%A7%DA%A9" target="_blank">ادامه در منبع</a>
+		</div>
+		<div class="step" data-x="-14500" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
+			<h2>موسیقی الکترونیک</h2>
+			<p>موسیقی الکترونیک گونه‌ای از موسیقی است که در مراحل تهیّهٔ آن از سازهای الکترونیک و فناوری موسیقی الکترونیک استفاده می‌شود یا در تولید صداها از ادوات آکوستیک استفاده نمی‌شود. به‌طور کلّی فرق عمدهٔ آن با انواع دیگر موسیقی در نوع صدای ساخته‌شده به‌وسیلهٔ ابزار الکترونیکی است. نمونه‌هایی از دستگاه‌های تولید صدای الکترومکانیکی شامل تل‌هارمونیوم، ارگ هموند و گیتار الکتریک می‌باشد. همچنین برای تهیّهٔ صدای کاملاً خالص الکترونیک می‌توان از دستگاه‌های ترمین، سینث‌سایزر و رایانه بهره جست. موسیقی الکترونیک عموماً به صورت بیکلام می‌باشد.</p>
+			<a href="https://fa.wikipedia.org/wiki/%D9%85%D9%88%D8%B3%DB%8C%D9%82%DB%8C_%D8%A7%D9%84%DA%A9%D8%AA%D8%B1%D9%88%D9%86%DB%8C%DA%A9" target="_blank">ادامه در منبع</a>
+		</div>
+		<div class="step" data-x="-14500" data-y="1000" data-z="-15000" data-scale="2" data-rotate-z="90">
+			<h2>ژانر های موسیقی</h2>
+			<ul>
+
+				<li>امبینت (Ambient)</li>
+				<li>بلوز (Blues)</li>
+				<li>موسیقی کلاسیک (Classical)</li>
+				<li>کمدی (Comedy)</li>
+				<li>کانتری (Country)</li>
+				<li>دنس (Dance)</li>
+				<li>الکترونیک (Electronic)</li>
+				<li><a href="https://www.tehranmelody.com/tmplus/music-genres/" target="_blank">ادامه در منبع</a></li>
+			</ul>
+		</div>
+		<div class="step" data-x="-14500" data-y="3000" data-z="-15000" data-scale="2" data-rotate-z="90">
+			<p>مثال هایی برای هر ژانری که در این روزنامه دیواری در مورد آن توضیح داده شده است</p>
+			<small>قطعه هستی اثر زنده یاد غلامحسین بنان :</small>
+			<audio src="./audios/hasti.mp3" controls></audio>
+			<small>سمفونی شماره ۵ بتهوون :</small>
+			<audio src="./audios/beethoven05.mp3" controls></audio>
+			<small>قطعه Hotel California اثر گروه Eagles :</small>
+			<audio src="./audios/hotelcalifornia.mp3" controls></audio>
+			<small>قطعه levels اثر avicii :</small>
+			<audio src="./audios/levels.mp3" controls></audio>
+		</div>
+		<div class="step" data-x="-14500" data-y="3000" data-z="-70000" data-scale="2" data-rotate-z="360">
+			<h2>پایان</h2>
+			<p>تیم لوتوس امیدوار است که در این روزنامه دیواری هرآن چیز که انتظار داشتید را دریافت کرده باشید...</p>
+		</div>
+	</div>
+	<script src="js/impress.js"></script>
+    <script>window.impress || document.write('<script src="https://cdn.jsdelivr.net/gh/impress/impress.js@2.0.0/js/impress.js">\x3C/script>');</script>
+    <script>impress().init()</script>
+</body>
 </html>
