--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-	<div id="impress">
+	<div id="impress" data-width="1024" data-height="768">
 		<div id="myFirstSlide" class="step" data-x="1000" data-y="1000" data-z="-1000" data-scale="2" data-rotate-z="90">
 			<img src="./img/logo1.png" alt="لوگوی لوتوس" width="50%">
 			<h2>موضوع: موسیقی</h2>
